Fix menu alignment

--- a/ckanext/dia_theme/less/dia_custom.less
+++ b/ckanext/dia_theme/less/dia_custom.less
@@ -758,10 +758,12 @@ header.account-masthead {
   .nav-tabs > li > a:hover {
     color: @tabHoverTextColor;
     background-color: @tabBackgroundColor;
+    border-color: @tabBackgroundColor;
   }
 
   .nav-tabs {
     border-bottom: 1px solid @tabBackgroundColor;
+    margin-left: 0;
     @media (max-width: @media-tablet) {
       color: @layoutBackgroundColor;
       border: none;
@@ -773,10 +775,6 @@ header.account-masthead {
     -moz-border-radius: 0 0 0 0;
     border-radius: 0 0 0 0;
     color: @tabTextColor;
-  }
-
-  .nav-tabs > li > a:hover {
-    border: none;
   }
 
   // Styling of Data and Resources
